# cord-basecamp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODEX.md  README.md  flake.nix  metadata.json  result
docs/: retro-log.md
modules/logos_cord/: manifest.json  metadata.json  plugin_metadata.json
plugins/cord_ui/: Main.qml  flake.nix  manifest.json  metadata.json
src/plugin/: CordPlugin.cpp  CordPlugin.h
tests/: headless_test.sh  logos_api_stub.cpp  test_cord_plugin.cpp
